; ModuleID = '/home/carl/AnghaBench/libgit2/tests/apply/extr_check.c_test_apply_check__initialize.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/apply/extr_check.c_test_apply_check__initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TEST_REPO_PATH = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"539bd011c4822c560c1d17cab095006b7a10f707\00", align 1
@GIT_RESET_HARD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_apply_check__initialize() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = load i32, i32* @TEST_REPO_PATH, align 4
  %4 = call i32 @cl_git_sandbox_init(i32 %3)
  store i32 %4, i32* @repo, align 4
  %5 = call i32 @git_oid_fromstr(i32* %1, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* @repo, align 4
  %7 = call i32 @git_commit_lookup(i32** %2, i32 %6, i32* %1)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32, i32* @repo, align 4
  %10 = load i32*, i32** %2, align 8
  %11 = load i32, i32* @GIT_RESET_HARD, align 4
  %12 = call i32 @git_reset(i32 %9, i32* %10, i32 %11, i32* null)
  %13 = call i32 @cl_git_pass(i32 %12)
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @git_commit_free(i32* %14)
  ret void
}

declare dso_local i32 @cl_git_sandbox_init(i32) #1

declare dso_local i32 @git_oid_fromstr(i32*, i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_commit_lookup(i32**, i32, i32*) #1

declare dso_local i32 @git_reset(i32, i32*, i32, i32*) #1

declare dso_local i32 @git_commit_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
